# app.beenut

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  pubspec.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: flutter.yml  release.yml
.impeccable/: design.json
.impeccable/critique/: 2026-07-10T16-46-57Z__lib-ui-settings-settings-page-dart.md
docs/: ARCHITECTURE.md  DEPLOYMENT.md  INSTALLER_SETUP.md
flutter-pi/beenut_preview_bridge/: README.md  beenut_preview_bridge.c  beenut_preview_bridge.h  install-flutter-pi-bridge.sh
lib/: main.dart
lib/core/: daemon_manager.dart  i18n.dart  maintenance_actions.dart  models.dart  service_client.dart  service_protocol.dart  service_transport.dart  system_permissions.dart  theme.dart  theme_controller.dart  ui_scale.dart  workbench_tokens.dart
lib/ui/: shell.dart
linux/: CMakeLists.txt
openwiki/: .last-update.json  architecture.md  domain_concepts.md  integrations.md  operations.md  quickstart.md
os/: README.md  beenut-arm64.yaml  beenut-x86_64.yaml  beenut.yaml  build-beenut-image.sh  configure-grub-silent.sh  configure-rpi-boot.sh  enable-appliance-services.sh  install-deb.sh  install-grub-arm64.sh  install-grub-x86_64.sh
scripts/: assemble-package.sh  build-debian.sh  build-macos.sh  build-os-orbstack.sh  build-pi.sh  build-service.sh  check-phase-evidence.py  create-macos-dmg.sh  create-release-evidence-set.sh  create-release-manifest.sh  desktop-field-validation.sh  dev-env.sh  docker-build.sh  gpio-field-test.sh  install-linux.sh  pi-field-validation.sh  pi-install-deps.sh  pi-run.sh  pi-smoke.sh  prepare-gst-dev.sh  probe-phase-hardware.sh  smoke-backend.sh  usb-update-field-validation.sh  validate-phase-gates.sh  watch-preview.sh
service/: CMakeLists.txt
service/cmake/: Findonnxruntime.cmake
service/config/: default.json
service/models/pills_detection/: labels.txt  manifest.json
service/models/yolo26n/: README.md  manifest.json
service/src/beenutd/: CMakeLists.txt  app_runtime.cpp  app_runtime.h  main.cpp
service/src/core/: CMakeLists.txt  app_config.cpp  app_config.h  config_migrations.cpp  config_migrations.h  control_server.cpp  control_server.h  counting_tracker.cpp  counting_tracker.h  gpio_controller.cpp  gpio_controller.h  gstreamer_camera.cpp  gstreamer_camera.h  hardware_discovery.cpp  hardware_discovery.h  onnx_yolo_engine.cpp  onnx_yolo_engine.h  power_control.cpp  power_control.h  service_state.cpp  service_state.h
service/tests/: CMakeLists.txt  service_tests.cpp
test/: catalog_tab_test.dart  daemon_manager_test.dart  kiosk_page_test.dart  models_test.dart  service_client_test.dart  service_protocol_test.dart  service_transport_test.dart  settings_page_test.dart  system_status_row_test.dart  widget_test.dart  workbench_settings_controls_test.dart  workbench_theme_test.dart
windows/: CMakeLists.txt
(+65 files in other folders)
